[gd_scene load_steps=14 format=4 uid="uid://d1tggtsuja0sq"]

[ext_resource type="Shader" uid="uid://e67ccuhnce2t" path="res://Source/Resources/shaders/visual_shader_test.tres" id="1_b3g82"]
[ext_resource type="Script" path="res://Source/items/item_box/itembox.gd" id="1_evc7v"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8r71n"]
resource_name = "Material"
cull_mode = 2
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.5

[sub_resource type="ArrayMesh" id="ArrayMesh_m3mr3"]
_surfaces = [{
"aabb": AABB(-1.24493, -1.24493, -1.24493, 2.48986, 2.48986, 2.48986),
"format": 34359742465,
"index_count": 276,
"index_data": PackedByteArray("EQAuAAMAEQAsAC4AEgAfAA0AEgAeAB8ACgAiAAgACgAjACIAAQArAA4AAQAqACsABQAYAAIABQAZABgAAAACAAEAAwAFAAQABgAIAAcACQALAAoADAAOAA0ADwARABAAEgAUABMAFQAXABYAEQAXABUAEQAPABcAAwAQABEAAwAEABAAAgAEAAUAAgAAAAQAFgASABMAFgAXABIACAAJAAoACAAGAAkADAAPABAADAANAA8ABwATABQABwAIABMAAQAGAAcAAQACAAYAFQAKAAsAFQAWAAoAFAANAA4AFAASAA0ADgAAAAEADgAMAAAACwAFAAMACwAJAAUAAAAlAAQAAAAmACUAGQAbABgAGQAaABsAAgAbAAYAAgAYABsABgAaAAkABgAbABoACQAZAAUACQAaABkAHAAfAB4AHAAdAB8ADQAdAA8ADQAfAB0AFwAeABIAFwAcAB4ADwAcABcADwAdABwAIwAhACIAIwAgACEAEwAgABYAEwAhACAAFgAjAAoAFgAgACMACAAhABMACAAiACEAJAAmACcAJAAlACYABAAkABAABAAlACQAEAAnAAwAEAAkACcADAAmAAAADAAnACYAKgApACsAKgAoACkADgApABQADgArACkABwAqAAEABwAoACoAFAAoAAcAFAApACgALAAvAC4ALAAtAC8AFQAsABEAFQAtACwAAwAvAAsAAwAuAC8ACwAtABUACwAvAC0A"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray("bJKDP2ySgz/qWZ+/bJKDP+pZnz9skoO/6lmfP2ySgz9skoO/bJKDP+pZn79skoO/bJKDP2ySg7/qWZ+/6lmfP2ySg79skoO/6lmfP2ySgz9skoM/bJKDP+pZnz9skoM/bJKDP2ySgz/qWZ8/6lmfP2ySg79skoM/bJKDP2ySg7/qWZ8/bJKDP+pZn79skoM/bJKDv2ySgz/qWZ+/6lmfv2ySgz9skoO/bJKDv+pZnz9skoO/6lmfv2ySg79skoO/bJKDv2ySg7/qWZ+/bJKDv+pZn79skoO/6lmfv2ySgz9skoM/bJKDv2ySgz/qWZ8/bJKDv+pZnz9skoM/bJKDv+pZn79skoM/bJKDv2ySg7/qWZ8/6lmfv2ySg79skoM/qfZZP0lfUz9JX1O/qfZZP0lfU79JX1O/qfZZP0lfU79JX1M/qfZZP0lfUz9JX1M/qfZZv0lfU79JX1M/qfZZv0lfU79JX1O/qfZZv0lfUz9JX1M/qfZZv0lfUz9JX1O/SV9Tv0lfU7+p9lk/SV9Tv0lfUz+p9lk/SV9TP0lfUz+p9lk/SV9TP0lfU7+p9lk/SV9Tv0lfU7+p9lm/SV9TP0lfU7+p9lm/SV9TP0lfUz+p9lm/SV9Tv0lfUz+p9lm/SV9TP6n2WT9JX1M/SV9Tv6n2WT9JX1M/SV9TP6n2WT9JX1O/SV9Tv6n2WT9JX1O/SV9Tv6n2Wb9JX1O/SV9Tv6n2Wb9JX1M/SV9TP6n2Wb9JX1O/SV9TP6n2Wb9JX1M/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_gq4va"]
resource_name = "item_cube_Cube"
_surfaces = [{
"aabb": AABB(-1.24493, -1.24493, -1.24493, 2.48986, 2.48986, 2.48986),
"attribute_data": PackedByteArray("6WsaPxaUBT/paxo/FpQFP+lrGj8WlAU/6WsaPxaUBT/paxo/FpQFPwAAID8XlAU/AAAgPxeUBT8AACA/F5QFPxeUJT/S1/Q+F5QlP9LX9D7paxo/0tf0PulrGj/S1/Q+6GsaPwAAAD/paxo/0tf0PulrGj/S1/Q+0de0PtLX9D7R17Q+0tf0PtHXtD7S1/Q+0de0PtLX9D7R17Q+0tf0PtLXtD4AAAA/0te0PgAAAD/S17Q+AAAAPy4oyz4XlAU/LijLPheUBT8tKMs+0tf0Pi0oyz7S1/Q+AADAPtLX9D4tKMs+0tf0Pi0oyz7S1/Q+6WsaPy4oiz7paxo/LiiLPuhrGj8AAIA+6WsaPy4oiz7paxo/LiiLPv//Hz+or2k+//8fP6ivaT7//x8/qK9pPheUJT8uKIs+F5QlPy4oiz7paxo/pK9pPulrGj+kr2k+6WsaP6SvaT7paxo/pK9pPulrGj+kr2k+LijLPi4oiz4uKMs+LiiLPgAAwD4uKIs+LijLPi4oiz4uKMs+LiiLPtLXtD4AAIA+0te0PgAAgD7S17Q+AACAPi0oyz6kr2k+LSjLPqSvaT7S17Q+LiiLPtLXtD4uKIs+0te0Pi4oiz7S17Q+LiiLPtLXtD4uKIs+6WsaP+lrOj/paxo/6Ws6P+lrGj/pazo/6GsaPwAAQD/paxo/6Ws6P+lrGj8XlEU/6WsaPxeURT/paxo/F5RFP+lrGj8XlEU/6WsaPxeURT///x8/6Ws6P///Hz/pazo/AAAgPxeURT8AACA/F5RFPwAAID8XlEU/LijLPheURT8AAAA+0tf0PgAAAD7S1/Q+LijLPheURT8AAAA+0tf0PlxQFj4AAAA/XFAWPgAAAD8tKMs+6Ws6P1xQFj4AAAA/LSjLPulrOj9cUBY+0tf0PlxQFj7S1/Q+XFAWPtLX9D5cUBY+0tf0PlxQFj7S1/Q+6WsaP+lrej/paxo/6Wt6P+lrGj/pa3o/6WsaP+lrej/paxo/6Wt6P+lrGj/AgrI86WsaP8CCsjzoaxo/AACAP+hrGj8AAIA/6GsaPwAAgD8AACA/4IKyPAAAID/ggrI8//8fP+lrej///x8/6Wt6P///Hz/pa3o/XFAWPi4oiz5cUBY+LiiLPlxQFj4uKIs+XFAWPi4oiz5cUBY+LiiLPlxQFj4AAIA+XFAWPgAAgD4tKMs+AACAP1xQFj4AAIA+LSjLPgAAgD8tKMs+6Wt6PwAAAD4uKIs+AAAAPi4oiz4tKMs+6Wt6PwAAAD4uKIs+6WsaP9LX9D7paxo/0tf0PulrGj/S1/Q+LSjLPtLX9D4tKMs+0tf0Pi0oyz7S1/Q+LijLPi4oiz4uKMs+LiiLPi4oyz4uKIs+6WsaPy4oiz7paxo/LiiLPulrGj8uKIs+LSjLPulrej8AAAA+LiiLPi0oyz7pa3o/LijLPheURT8AAAA+0tf0Pi4oyz4XlEU/6WsaP+lrej/paxo/6Wt6P+lrGj/pa3o/6WsaPxeURT/paxo/F5RFP+lrGj8XlEU/LijLPsCCsjxcUBY+AACAPi0oyz4AAIA/6WsaP8CCsjzpaxo/wIKyPOhrGj8AAIA/6WsaP6SvaT7paxo/pK9pPulrGj+kr2k+LSjLPqSvaT7S17Q+AACAPi0oyz6kr2k+LSjLPulrOj9cUBY+AAAAPy0oyz7pazo/LijLPheUBT/S17Q+AAAAPy4oyz4XlAU/6WsaPxaUBT/paxo/FpQFP+lrGj8WlAU/6WsaP+lrOj/paxo/6Ws6P+lrGj/pazo///8fP6ivaT4XlCU/LiiLPheUJT8uKIs+AAAgP+CCsjzqa1o/LiiLPv//Hz/pa3o/AAAgPxeUBT8XlCU/0tf0PheUJT/S1/Q+//8fP+lrOj/qa1o/0tf0PgAAID8XlEU/XFAWPtLX9D5cUBY+0tf0PlxQFj7S1/Q+XFAWPi4oiz5cUBY+LiiLPlxQFj4uKIs+0de0PtLX9D7R17Q+0tf0PtHXtD7S1/Q+0te0Pi4oiz7S17Q+LiiLPtLXtD4uKIs+"),
"format": 34359742487,
"index_count": 276,
"index_data": PackedByteArray("VQC6AA8AVQC0ALoAWwCOAEIAWwCLAI4ANgCYACwANgCbAJgABQCxAEYABQCuALEAGQB4AAoAGQB7AHgAAgAMAAcAEQAbABYAIAAqACUALwA5ADQAPwBJAEMATQBYAFMAXABnAGIAbAB1AHEAWQB3AG0AWQBPAHcAEABRAFYAEAAVAFEADQAXABwADQADABcAcgBdAGMAcgB2AF0AKwAwADUAKwAhADAAQABOAFQAQABEAE4AJABfAGUAJAAoAF8ACAAiACYACAAOACIAagAzADgAagBvADMAaABFAEoAaABeAEUARwAAAAYARwA8AAAAOgAdABIAOgAxAB0ABAChABgABACkAKEAfQCDAHoAfQCAAIMACwCCAB8ACwB5AIIAHgB+AC0AHgCBAH4ALgB8ABoALgB/AHwAhgCPAIwAhgCJAI8AQQCHAEsAQQCNAIcAcwCKAFoAcwCEAIoATACFAHQATACIAIUAmQCTAJYAmQCQAJMAYQCSAHAAYQCVAJIAbgCaADIAbgCRAJoAKQCUAGAAKQCXAJQAnACiAKUAnACfAKIAFACdAFAAFACgAJ0AUgCnAD4AUgCeAKcAPQCjAAEAPQCmAKMArwCsALIArwCpAKwASACtAGYASACzAK0AJwCwAAkAJwCqALAAZACoACMAZACrAKgAtQC+ALsAtQC4AL4AawC2AFcAawC5ALYAEwC/ADsAEwC8AL8ANwC3AGkANwC9ALcA"),
"material": SubResource("StandardMaterial3D_8r71n"),
"name": "Material",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 192,
"vertex_data": PackedByteArray("bJKDP2ySgz/qWZ+/bJKDP2ySgz/qWZ+/bJKDP2ySgz/qWZ+/bJKDP2ySgz/qWZ+/bJKDP2ySgz/qWZ+/bJKDP+pZnz9skoO/bJKDP+pZnz9skoO/bJKDP+pZnz9skoO/bJKDP+pZnz9skoO/bJKDP+pZnz9skoO/6lmfP2ySgz9skoO/6lmfP2ySgz9skoO/6lmfP2ySgz9skoO/6lmfP2ySgz9skoO/6lmfP2ySgz9skoO/bJKDP+pZn79skoO/bJKDP+pZn79skoO/bJKDP+pZn79skoO/bJKDP+pZn79skoO/bJKDP+pZn79skoO/bJKDP2ySg7/qWZ+/bJKDP2ySg7/qWZ+/bJKDP2ySg7/qWZ+/bJKDP2ySg7/qWZ+/bJKDP2ySg7/qWZ+/6lmfP2ySg79skoO/6lmfP2ySg79skoO/6lmfP2ySg79skoO/6lmfP2ySg79skoO/6lmfP2ySg79skoO/6lmfP2ySgz9skoM/6lmfP2ySgz9skoM/6lmfP2ySgz9skoM/6lmfP2ySgz9skoM/6lmfP2ySgz9skoM/bJKDP+pZnz9skoM/bJKDP+pZnz9skoM/bJKDP+pZnz9skoM/bJKDP+pZnz9skoM/bJKDP+pZnz9skoM/bJKDP2ySgz/qWZ8/bJKDP2ySgz/qWZ8/bJKDP2ySgz/qWZ8/bJKDP2ySgz/qWZ8/bJKDP2ySgz/qWZ8/6lmfP2ySg79skoM/6lmfP2ySg79skoM/6lmfP2ySg79skoM/6lmfP2ySg79skoM/6lmfP2ySg79skoM/bJKDP2ySg7/qWZ8/bJKDP2ySg7/qWZ8/bJKDP2ySg7/qWZ8/bJKDP2ySg7/qWZ8/bJKDP2ySg7/qWZ8/bJKDP+pZn79skoM/bJKDP+pZn79skoM/bJKDP+pZn79skoM/bJKDP+pZn79skoM/bJKDP+pZn79skoM/bJKDv2ySgz/qWZ+/bJKDv2ySgz/qWZ+/bJKDv2ySgz/qWZ+/bJKDv2ySgz/qWZ+/bJKDv2ySgz/qWZ+/6lmfv2ySgz9skoO/6lmfv2ySgz9skoO/6lmfv2ySgz9skoO/6lmfv2ySgz9skoO/6lmfv2ySgz9skoO/bJKDv+pZnz9skoO/bJKDv+pZnz9skoO/bJKDv+pZnz9skoO/bJKDv+pZnz9skoO/bJKDv+pZnz9skoO/6lmfv2ySg79skoO/6lmfv2ySg79skoO/6lmfv2ySg79skoO/6lmfv2ySg79skoO/6lmfv2ySg79skoO/bJKDv2ySg7/qWZ+/bJKDv2ySg7/qWZ+/bJKDv2ySg7/qWZ+/bJKDv2ySg7/qWZ+/bJKDv2ySg7/qWZ+/bJKDv+pZn79skoO/bJKDv+pZn79skoO/bJKDv+pZn79skoO/bJKDv+pZn79skoO/bJKDv+pZn79skoO/6lmfv2ySgz9skoM/6lmfv2ySgz9skoM/6lmfv2ySgz9skoM/6lmfv2ySgz9skoM/6lmfv2ySgz9skoM/bJKDv2ySgz/qWZ8/bJKDv2ySgz/qWZ8/bJKDv2ySgz/qWZ8/bJKDv2ySgz/qWZ8/bJKDv2ySgz/qWZ8/bJKDv+pZnz9skoM/bJKDv+pZnz9skoM/bJKDv+pZnz9skoM/bJKDv+pZnz9skoM/bJKDv+pZnz9skoM/bJKDv+pZn79skoM/bJKDv+pZn79skoM/bJKDv+pZn79skoM/bJKDv+pZn79skoM/bJKDv+pZn79skoM/bJKDv2ySg7/qWZ8/bJKDv2ySg7/qWZ8/bJKDv2ySg7/qWZ8/bJKDv2ySg7/qWZ8/bJKDv2ySg7/qWZ8/6lmfv2ySg79skoM/6lmfv2ySg79skoM/6lmfv2ySg79skoM/6lmfv2ySg79skoM/6lmfv2ySg79skoM/qfZZP0lfUz9JX1O/qfZZP0lfUz9JX1O/qfZZP0lfUz9JX1O/qfZZP0lfU79JX1O/qfZZP0lfU79JX1O/qfZZP0lfU79JX1O/qfZZP0lfU79JX1M/qfZZP0lfU79JX1M/qfZZP0lfU79JX1M/qfZZP0lfUz9JX1M/qfZZP0lfUz9JX1M/qfZZP0lfUz9JX1M/qfZZv0lfU79JX1M/qfZZv0lfU79JX1M/qfZZv0lfU79JX1M/qfZZv0lfU79JX1O/qfZZv0lfU79JX1O/qfZZv0lfU79JX1O/qfZZv0lfUz9JX1M/qfZZv0lfUz9JX1M/qfZZv0lfUz9JX1M/qfZZv0lfUz9JX1O/qfZZv0lfUz9JX1O/qfZZv0lfUz9JX1O/SV9Tv0lfU7+p9lk/SV9Tv0lfU7+p9lk/SV9Tv0lfU7+p9lk/SV9Tv0lfUz+p9lk/SV9Tv0lfUz+p9lk/SV9Tv0lfUz+p9lk/SV9TP0lfUz+p9lk/SV9TP0lfUz+p9lk/SV9TP0lfUz+p9lk/SV9TP0lfU7+p9lk/SV9TP0lfU7+p9lk/SV9TP0lfU7+p9lk/SV9Tv0lfU7+p9lm/SV9Tv0lfU7+p9lm/SV9Tv0lfU7+p9lm/SV9TP0lfU7+p9lm/SV9TP0lfU7+p9lm/SV9TP0lfU7+p9lm/SV9TP0lfUz+p9lm/SV9TP0lfUz+p9lm/SV9TP0lfUz+p9lm/SV9Tv0lfUz+p9lm/SV9Tv0lfUz+p9lm/SV9Tv0lfUz+p9lm/SV9TP6n2WT9JX1M/SV9TP6n2WT9JX1M/SV9TP6n2WT9JX1M/SV9Tv6n2WT9JX1M/SV9Tv6n2WT9JX1M/SV9Tv6n2WT9JX1M/SV9TP6n2WT9JX1O/SV9TP6n2WT9JX1O/SV9TP6n2WT9JX1O/SV9Tv6n2WT9JX1O/SV9Tv6n2WT9JX1O/SV9Tv6n2WT9JX1O/SV9Tv6n2Wb9JX1O/SV9Tv6n2Wb9JX1O/SV9Tv6n2Wb9JX1O/SV9Tv6n2Wb9JX1M/SV9Tv6n2Wb9JX1M/SV9Tv6n2Wb9JX1M/SV9TP6n2Wb9JX1O/SV9TP6n2Wb9JX1O/SV9TP6n2Wb9JX1O/SV9TP6n2Wb9JX1M/SV9TP6n2Wb9JX1M/SV9TP6n2Wb9JX1M//7////9//99zqwAA////v1TVVNX/f//f////v/9///8AAHOr////v/9/c6v///8//7////9//99U1VTV/3//3/+//7//P//fcytzq////79zq/9/////P3Orcyv///+/VNVU1f9//9////+//3////+//7//P//f/3+LVP///z//vwAA////v1TVqir/v//f/7//P/+//99zK4tU////v3Or//////+//78AAP///79U1aoq/7//3////7//f///AABzq////79zq/9/////P3Ori9T///+/VNWqKv+//9////+//3////+//z//v//f//+L1P///79zq3Mr////v6qqqqr/P/7//7//f/9/////v/+//z//34vU//////+//3//v/8//v+qqqqq/z/+//+//7//P//fcytzq////7//f/+//z/+//9/cyv///8/qqqqqv8//v//v/9//3///3Mr/3////8///+L1P///79zq4vU////v6qqVFX/v//f/7//f/9/////v/8//7//3/9/i9T///8//3//P////7+qqlRV/7//3/+//3//f///cyv/f////z+L1AAA////v/9//z////+/qqpUVf+//9//v/8//7//33Mri1T///+//7////9//99zqwAA////v///c6v///+/qipU1f+//98AAP+//3///4tU/3////8/i1RzK////7+qKlTV/7//3wAA/7//f////z//v/+//9//f3Or////P/+/////f//fi9Rzq////7+qKlTV/7//3/8//7//v//fi1T/f////z+LVIvU////v6oqqir/v/+fAAD/v/9/////P/8//7//n3Or//////+//78AAP///7///3Or////v6oqqir/v/+fAAD/v/9/////f4tU////P/+/AAD///+/i9SLVP///7+qKqoq/7//n/8//z//v/+fAACL1P///7+LVHMr////v1RVqqr/v//f/z//f/9/////P/+//7//3/9//7//P/7//39zK////z+L1P9/////P1RVqqr/v//f/z//f/9///+L1P//////v/9//7//P/7/i9Rzq////79UVaqq/7//3/8//7//v//fi9QAAP///7//f/8/////v4vUi1T///+/VFVUVf+//5//P/8//7//n/9/i9T///8//3//P////7+L1P9/////P1RVVFX/v/+f/z//f/9///8AAIvU////v4tUi9T///+/VFVUVf+//5//P/9//3////8//z//v/+fc6v/f////z9zq3Mr////v////3//f///c6v/f////z9zq4vU////v////3//f/////+L1P///79zq4vU////v////3//f/////+L1P///79zq3Mr////v////3//f///AACL1P///7+LVIvU////vwAA/3//f///i1T/f////z+LVIvU////vwAA/3//f///AACL1P///7+LVHMr////vwAA/3//f///i1T/f////z+LVHMr////vwAA/3//f////3//f/9/////f4vU////P4vU/3////8//3//f/9/////f3Mr////P4vU/3////8//3//f/9/////f3Mr////P3Mr/3////8//3//f/9/////f4vU////P3Mr/3////8///////9///9zq///////v///c6v///+///////9//v9zq///////vwAAc6v///+///////9///9zqwAA////vwAAc6v///+///////9///9zqwAA////v///c6v///+/i9T//////7//f///AAD/v3Mrc6v///+/i9T//////7//f///AAD/v4vUc6v///+//39zq////z//f///AAD/v3Mrc6v///+//39zq////z//f///AAD/v4vUc6v///+//3+LVP///z//fwAA////v4vUi1T///+/i9QAAP///7//fwAA////v4vUi1T///+//3+LVP///z//fwAA////v3Mri1T///+/i9QAAP///7//fwAA////v3Mri1T///+/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_m3mr3")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00wqd"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_b3g82")
shader_parameter/ColorParameter = Color(3, 1, 2, 1)
shader_parameter/Strength = 2.0
shader_parameter/LightColor = Color(0.675228, 0.824033, 1, 1)
shader_parameter/FloatParameter = -0.12

[sub_resource type="BoxShape3D" id="BoxShape3D_cxr7y"]
size = Vector3(2.51514, 3.99022, 3.8923)

[sub_resource type="Animation" id="Animation_heado"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_28qsb"]
resource_name = "idle"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.5, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_323mg"]
_data = {
"RESET": SubResource("Animation_heado"),
"idle": SubResource("Animation_28qsb")
}

[sub_resource type="Animation" id="Animation_o7l1p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Cube:surface_material_override/0:shader_parameter/FloatParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qmqqq"]
resource_name = "despawn"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pivot/Cube:surface_material_override/0:shader_parameter/FloatParameter")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.12, 0.505, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0), Vector3(0, 18.8496, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pivot:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 1), Vector3(4, 4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.733333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x6ibr"]
_data = {
"RESET": SubResource("Animation_o7l1p"),
"despawn": SubResource("Animation_qmqqq")
}

[node name="Itembox" type="Node3D"]
script = ExtResource("1_evc7v")

[node name="pivot" type="Node3D" parent="."]

[node name="Cube" type="MeshInstance3D" parent="pivot"]
mesh = SubResource("ArrayMesh_gq4va")
skeleton = NodePath("")
surface_material_override/0 = SubResource("ShaderMaterial_00wqd")

[node name="Area3D" type="Area3D" parent="pivot"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="pivot/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00366211, -0.198586, 0.000289917)
shape = SubResource("BoxShape3D_cxr7y")

[node name="idle_player" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_323mg")
}

[node name="despawn_player" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_x6ibr")
}

[node name="regen_timer" type="Timer" parent="."]

[connection signal="body_entered" from="pivot/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
